// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading level 1 renders a level-1 heading 1`] = `
<h1
  aria-level="1"
  class="css-reset-4rbku5 css-text-76zvg2 r-fontWeight-vw2c0b"
  data-testid="heading"
  dir="auto"
  role="heading"
  style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 32px; line-height: 1.5; margin: 20px 30px 5px 30px;"
>
  Some Heading
</h1>
`;

exports[`Heading level 2 renders a level-2 heading 1`] = `
<h2
  aria-level="2"
  class="css-reset-4rbku5 css-text-76zvg2 r-fontWeight-vw2c0b"
  data-testid="heading"
  dir="auto"
  role="heading"
  style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5; margin: 20px 30px 5px 30px;"
>
  Some Heading
</h2>
`;

exports[`Heading level 3 renders a level-3 heading 1`] = `
<h3
  aria-level="3"
  class="css-reset-4rbku5 css-text-76zvg2 r-fontWeight-vw2c0b"
  data-testid="heading"
  dir="auto"
  role="heading"
  style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5; margin: 20px 30px 5px 30px;"
>
  Some Heading
</h3>
`;
